# django-snowflake

./: README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
django_snowflake/: __init__.py  __version__.py  base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
