[metadata]
name = django-snowflake
version = 1.0.2
author = Manan
author_email = thakkar1016@gmail.com
description = A backend for Django and Snowflake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdmitHub/django-snowflake
classifiers = 
    Programming Language :: Python :: 3
